Changed homepage to https

--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
   "devDependencies": {
     "gh-pages": "^3.0.0"
   },
-  "homepage": "http://Shiyuan-Huang-23.github.io/phylo-lib-web"
+  "homepage": "https://Shiyuan-Huang-23.github.io/phylo-lib-web"
 }
