--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "re:build": "bsb -make-world -clean-world",
-    "re:watch": "bsb -make-world -clean-world -w"
+    "re:watch": "bsb -make-world -clean-world -w",
+    "lint": "eslint"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +39,8 @@
   },
   "devDependencies": {
     "bs-platform": "7.3.2",
+    "eslint": "^7.2.0",
+    "eslint-plugin-react": "^7.20.0",
     "gh-pages": "^3.0.0"
   },
   "homepage": "https://Shiyuan-Huang-23.github.io/phylo-lib-web"
