--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.2.1",
     "antd": "^4.3.4",
     "bs-platform": "7.3.2",
     "gh-pages": "^3.0.0"
