--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3": "^5.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reason-react": "^0.9.1"
   },
