--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "bs-platform": "8.0.3",
     "gh-pages": "^3.0.0"
   },
-  "homepage": "https://Shiyuan-Huang-23.github.io/phylo-lib-web"
+  "homepage": "https://v-s-f.github.io/phylo-lib-web/"
 }
